fixed vertical scrollbar

--- a/src/app.css
+++ b/src/app.css
@@ -57,6 +57,10 @@ image {
 
 
 .file-table-outer {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  padding: 0;
   overflow-y: scroll;
   top: 0;
   left: 0;
